wiki/products/resume/master/v1/content.md
---
type: resume-content
title: Resume Master v1 Content
description: Evidence-linked Korean A4 master resume copy before HTML composition.
timestamp: 2026-07-11
status: superseded
tags: [resume, v1, content, korean]
---

# Resume Master v1 Content

## Header

- Role: `Backend Engineer · AI Product Systems`
- Name: 김대정
- Positioning: AI 제품을 운영 가능한 시스템으로 만드는 백엔드 엔지니어
- Contact: email, phone, GitHub, 경기 안양시

## Summary

- AI 콘텐츠 생성 backend 전면 재구축과 이후 개발·운영 전담 (`thready.backend-rebuild`)
- 월 수만 건 규모 요청을 처리하는 production backend를 HTTP 5xx 0.3% 수준으로 운영 (`thready.production-operation-quality`)
- Backend Engineer 합류 후 Tech Lead·PO 역할 병행 (`career.medisolve-role-evolution`)
- 제품 일정·이슈·릴리스 운영을 agent-readable workflow로 구조화·리드 (`mediness.product-operations`)

## Capabilities

### AI Product Systems

- typed prompt builder, LLM judge, 평가 루프, 관측 로깅 기반 생성 품질 시스템 구축 (`thready.generation-quality-system`)
- realtime AI 상담 backend의 세션 lifecycle과 provider 경계 안정화 공동 주 기여 (`centurion.say-realtime-ai`)

### Product Backend Ownership

- 주문·재고 API와 RabbitMQ·TaskIQ worker, retry, test·CI·onboarding 구축 주도 (`centurion.bay-async-backend`)
- 병원 product backend monorepo의 service boundary와 migration·domain audit 주도 (`nexus.backend-architecture`)

### Async And Realtime

- 실패 가능한 작업을 API 경계 밖 worker로 분리하고 retry 가능한 비동기 흐름 구축 주도 (`centurion.bay-async-backend`)
- realtime session lifecycle과 provider boundary 안정화 공동 주 기여 (`centurion.say-realtime-ai`)

### Infra-Aware Delivery

- 회사 Azure/Terraform infra 전반을 담당하며 B2B/B2C·제품·환경별 resource boundary, 배포, runbook 관리 (`infra.company-azure-ownership`)
- 외부 product Terraform IaC 구축 전담 (`nexus.terraform-infra`)

### Engineering Standard

- layered architecture·DI·ADR·convention·runbook 기반 조직 표준 FastAPI template 설계·구축 전담 (`be-template.backend-standard`)
- agent context system과 반복 작업 automation skill 내장 (`be-template.agent-context`)

### Agent-Readable Operations

- pipeline registry와 release gate 기반 제품팀 일정·이슈·릴리스 운영 리드 (`mediness.product-operations`)
- 협업 도구 활동 집계와 blocker triage를 지원하는 daily briefing agent 구축·운영 (`mediness.daily-briefing`)

## Skills

- Language / Framework: Python, FastAPI, TypeScript, NestJS, Java, Spring Boot
- Data / Messaging: PostgreSQL, MySQL, Redis, RabbitMQ, TaskIQ
- Infra / Delivery: Azure, AWS, Terraform, Docker, GitHub Actions
- AI Product: LLM integration/evaluation, typed prompt, structured output, WebSocket, SSE, STT

## Selected Projects

### Thready · AI 콘텐츠 생성 제품

- FastAPI 기반 backend 전면 재구축과 cutover 이후 개발·운영 전담 (`thready.backend-rebuild`, `thready.release-operation`)
- typed prompt builder, LLM judge, 평가 루프, 관측 로깅 기반 생성 품질 시스템 구축 (`thready.generation-quality-system`)

### Centurion · 피부과 운영 AI 메디컬 플랫폼 (제품 시작 시점부터 구축)

- 주문·재고 API와 RabbitMQ·TaskIQ 비동기 worker, retry, test·CI·onboarding 구축 주도 (`centurion.bay-async-backend`)
- realtime AI 상담 backend의 세션 lifecycle과 provider 경계 안정화 공동 주 기여 (`centurion.say-realtime-ai`)

### BE Template · Engineering Standard

- layered architecture·DI·ADR·convention·runbook 기반 조직 표준 FastAPI template 설계·구축 전담 (`be-template.backend-standard`)
- agent context system과 반복 작업 automation skill 내장 (`be-template.agent-context`)

## Career

- MediSolve AI · Backend Engineer · 2025.04-current: AI product backend와 제품 운영·engineering standard 담당, Tech Lead·PO 역할 병행 (`career.medisolve-role-evolution`)
- 더데이랩스 · Freelance · 2025.02-2025.04: 현 MediSolve AI 대표와 프리랜서로 협업 시작 — Centurion 초기 backend 구축과 개발팀 시스템·backend 기준 수립, 창업과 함께 합류 (`career.thedaylabs-freelance`)
- Memento AI · Backend Engineer · 2024.10-2025.01: 예약·결제 backend의 선결제와 환불·마일리지·티켓 rollback 안정화 — 회사 폐업으로 재직 종료 (`career.memento-payment`)
- 개인 프로젝트 · TellingMe · 2024.01-2024.12: Spring Boot backend와 AWS 배포·모니터링 리드, Memento 재직과 병행 (`career.tellingme-backend-infra`)
- STUDIO LAB · AI Engineer -> PM -> Backend Engineer · 2021.12-2024.01: SellerCanvas(생성형 AI 커머스 콘텐츠, CES 2024 최고혁신상 제품)의 PM 메인 역할로 제품 시스템 기획·구축 (`career.sellercanvas-product-system`)
- 아이즈솔 · Vision AI Engineer · 2020.08-2021.06: Vision AI에서 시작한 AI product engineering 경력 (`career.ai-pm-backend-continuity`)

## Agent Workflow

- AI agent를 코드 자동완성보다 engineering operating layer로 활용
- project rules와 source-of-truth routing을 사람과 agent가 함께 읽는 실행 경계로 구성 (`be-template.agent-context`)
- decision·spec·work·release gate로 제품 실행과 릴리스 추적 (`mediness.product-operations`)
- daily briefing agent로 협업 도구 활동 집계와 blocker triage 지원 (`mediness.daily-briefing`)

## Education And Credentials

- 우송대학교 게임멀티미디어 전공 (`credentials.education`)
- CES 2024 Best of Innovation · AI 부문 대상 제품 참여 (`credentials.ces-2024`)
- 특허 등록 `페이지 출력 방법` · 등록 10-2898273 (`credentials.page-output-patent`)
- ADsP · 데이터분석 준전문가 (`credentials.adsp`)
